# multi-tasking-quality-benchmark

./: .gitignore  AGENTS.md  LICENSE  Makefile  Makefile.python  README.md  SECURITY.md  pyproject.toml
.claude/: settings.json
.claude/scripts/: statusline-json-structure.json  statusline.sh
.claude/scripts/read-once/: compact.sh  hook.sh
.github/workflows/: codeql.yaml
changelog.d/: 20260620_scaffold.md
docs/: TODO.md  UserStory.md  architecture.md  decisions.md
src/mtqb/: __init__.py  loader.py  models.py
tests/mtqb/: test_loader.py
tests/mtqb/fixtures/: all_time.json  projects.json  summaries.json
tests/mtqb/fixtures/durations/: 2026-03-09.json
