[project]
name = "mtqb"
version = "0.1.0"
description = "Correlate WakaTime coding activity with code quality metrics"
requires-python = ">=3.13"
readme = "README.md"
license = "Apache-2.0"
dependencies = ["pydantic>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtqb"]

[dependency-groups]
dev = [
    "scriv[toml]>=1.8",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "complexipy>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S"] # S = flake8-bandit (security)
ignore = []

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
fail_under = 70

[tool.complexipy]
paths = ["src"]
max-complexity-allowed = 15

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
commit = true
tag = true
allow_dirty = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
message = "Bump version: {current_version} → {new_version}"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/mtqb/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.scriv]
format = "md"
fragment_directory = "changelog.d"
categories = ["Added", "Changed", "Deprecated", "Removed", "Fixed", "Security"]
md_header_level = "2"
entry_title_template = "[{{ version }}] - {{ date.strftime('%Y-%m-%d') }}"
md_html_anchors = false
